Added main screen layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,13 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_main">Peridot</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Peridot</string>
+    <string name="nav_header_subtitle">quinnshultz.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="nav_menu_password_account">Accounts</string>
+    <string name="nav_menu_generate_password">Generate password</string>
+    <string name="action_settings">Settings</string>
 </resources>
